--- a/index.html
+++ b/index.html
@@ -14,11 +14,13 @@
     <script src="/resources/scripts/highlight/highlight.pack.js"></script>
     <script>hljs.initHighlightingOnLoad();</script>
     <link rel="import" href="/src/aq-dashboard/aq-dashboard.html">
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
+    <!--link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet"-->
+
+    <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700" rel="stylesheet">
 
     <style>
       body {
-        font-family: 'Open Sans', sans-serif;
+        font-family: 'Lato', sans-serif;
         background-color: #fff;
       }
     </style>
