--- a/src/dialog/aq-invitefriend-dialog.html
+++ b/src/dialog/aq-invitefriend-dialog.html
@@ -6,7 +6,7 @@
 <link rel="import" href="../../bower_components/gold-email-input/gold-email-input.html">
 
 <link rel='import' href='../icons/aq-iconset.html'>
-<link href="https://fonts.googleapis.com/css?family=Lato:400,700" rel="stylesheet">
+<!--link href="https://fonts.googleapis.com/css?family=Lato:400,700" rel="stylesheet"-->
 <dom-module id='aq-invitefriend-dialog'>
     <style include="iron-flex iron-flex-alignment iron-positioning">
     </style>
