--- a/src/dialog/aq-sendfeedback-dialog.html
+++ b/src/dialog/aq-sendfeedback-dialog.html
@@ -7,7 +7,7 @@
 <!--<link rel='import' href='../components/aq-markdown-editor.html'>-->
 <link rel="import" href="../components/aq-html-editor.html">
 <link rel='import' href='../icons/aq-iconset.html'>
-<link href="https://fonts.googleapis.com/css?family=Lato:400,700" rel="stylesheet">
+<!--link href="https://fonts.googleapis.com/css?family=Lato:400,700" rel="stylesheet"-->
 <dom-module id='aq-sendfeedback-dialog'>
     <style include="iron-flex iron-flex-alignment iron-positioning"></style>
     <style>
