--- a/src/aq-dashboard/aq-dashboard.html
+++ b/src/aq-dashboard/aq-dashboard.html
@@ -56,7 +56,7 @@
 
       paper-header-panel {
         height: 100%;
-        background-color: #f4f9f7;
+        --background-color: #f4f9f7;
       }
 
       aq-sidebar{
