Fixed UI code with support for forward test. (Needs testing)

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="/resources/scripts/highlight/styles/default.css">
     <script src="/resources/scripts/highlight/highlight.pack.js"></script>
     <script>hljs.initHighlightingOnLoad();</script>
-    <link rel="import" href="/src/aq-dashboard/aq-dashboard.html">
+    <link rel="import" href="/src/aq-app/aq-app.html">
     
     <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700" rel="stylesheet">
 
@@ -28,6 +28,6 @@
 
   <body class="fullbleed layout vertical">
     <span id="browser-sync-binding"></span>
-    <aq-dashboard></aq-dashboard>
+    <aq-app></aq-app>
   </body>
 </html>
