Multiple changes 1. Modified url/main nav-bar tabs 2. Added support for cloning the backtest from community 3. Modified code to use width-detector as much as possible 4. Code cleaning

--- a/src/dialog/aq-editor-strategy-input-dialog.html
+++ b/src/dialog/aq-editor-strategy-input-dialog.html
@@ -31,12 +31,6 @@
         };
       }
 
-
-      paper-button{
-          border-radius: 5px;
-          height:30px;
-      }
-
       #cancelBtn {
         --paper-button:{
           color: #9a9a9a;
@@ -133,7 +127,7 @@
 
 			onSubmit: function() {
 				if(this.$.strategyNameInput.validate() && this.$.strategyDesc.validate()){
-					this.fire('create-action',{name:this.strategyName, description: this.strategyDesc});
+					this.fire('create-strategy-action', {name:this.strategyName, description: this.strategyDesc});
           this.reset();
 					this.$.createStrategyModalDialog.close();
 				}
