--- a/src/aq-app/aq-app.html
+++ b/src/aq-app/aq-app.html
@@ -63,7 +63,7 @@
     <template>
 
       <aq-check-authentication id='authItem'></aq-check-authentication>
-
+     
       <div id="main">
         <paper-drawer-panel id="drawerpanel" force-narrow=1 responsive-width='900px' drawer-width="[[drawerWidth]]" narrow="{{narrow}}">
             
@@ -434,6 +434,10 @@
         redirect: function(route) {
           if(!this.hasToken && route.indexOf('dashboard') != -1) {
               return "/main";
+          }
+
+          if(this.hasToken && route.indexOf('signin') != -1) {
+              return "/dashboard/editor";
           }
 
           switch(route) {
