1. Code cleanup. Removed unnecessary folders 2. Fixed syntax according to polylint 3. Bug fix: graph was not getting displayed in static case (axis extremes were set) 4. Added polymer.json  to create a polymer build

--- a/src/aq-app/aq-app.html
+++ b/src/aq-app/aq-app.html
@@ -1,4 +1,3 @@
-<!--link rel="import" href="../../bower_components/app-router/app-router.html"-->
 <link rel="import" href="../../bower_components/app-route/app-route.html">
 <link rel="import" href="../../bower_components/app-route/app-location.html">
 <link rel="import" href="../../bower_components/iron-lazy-pages/iron-lazy-pages.html">
@@ -335,6 +334,7 @@
         },
 
         requestExecution: function(e) {
+            console.log(e);
             if(this.$.authItem.checkHasToken()) {
                 this.$$('#socketHandler').handleExecution(e.detail.backtestId);
             } else {
