--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="manifest" href="/manifest.json">
-    <script src="/bower_components/webcomponentsjs/webcomponents-lite.js"></script>
+    <!--script src="/bower_components/webcomponentsjs/webcomponents-lite.js"></script>
     <script src="/bower_components/highcharts/highstock.js"></script>
-    <link rel='import' href="/bower_components/iron-meta/iron-meta.html">
+    <link rel='import' href="/bower_components/iron-meta/iron-meta.html"-->
     <link rel="stylesheet" href="/resources/scripts/highlight/styles/default.css">
     <script src="/resources/scripts/highlight/highlight.pack.js"></script>
     <script>hljs.initHighlightingOnLoad();</script>
