Fixed the comparison element (using polymer standard code) Fixed Home and About Page Changed event names to adhere to standard

--- a/src/dialog/aq-editor-strategy-input-dialog.html
+++ b/src/dialog/aq-editor-strategy-input-dialog.html
@@ -12,8 +12,8 @@
 	<style>
 		
       paper-dialog {
-        width: 470px;
-        height: 240px;
+        width: 500px;
+        height: 250px;
         margin-right:0px;
         margin-left:0px;
         padding-right: 0px;
@@ -26,8 +26,9 @@
 
       paper-button {
         --paper-button:{
-          background-color: teal;
-          color: white;
+            background-color: teal;
+            color: white;
+            padding: 5px;
         };
       }
 
