1. Added settings comparison panel 2. Added benchmark and universe options JSON files 3. Route to signup on register (to editor if token is available) 4. Added HTML help and changed the help element to read HTML

--- a/src/aq-app/aq-app.html
+++ b/src/aq-app/aq-app.html
@@ -449,7 +449,7 @@
               return "/main";
           }
 
-          if(this.hasToken && route.indexOf('signin') != -1) {
+          if(this.hasToken && (route.indexOf('signin') != -1 || route.indexOf('signup') != -1)) {
               return "/dashboard/editor";
           }
 
