1. Encapsulated the html-rendered inside new element 2. Added Tutorials 3. Changed Help

--- a/src/dialog/aq-editor-strategy-input-dialog.html
+++ b/src/dialog/aq-editor-strategy-input-dialog.html
@@ -52,7 +52,7 @@
 
   		.input-fields {
   			--padding-bottom: 20px;
-  			--paper-input-container-color:#3c3c3c;
+  			--paper-input-container-color:#9d9d9d;
   			--paper-input-container-input-color:#3c3c3c;
         --paper-input-container-focus-color :teal;
    		}
