--- a/src/dialog/aq-sendfeedback-dialog.html
+++ b/src/dialog/aq-sendfeedback-dialog.html
@@ -111,6 +111,7 @@
                 <p class="self-end">Send Feedback</p>
             </div>
 
+            <form>
             <paper-input id='feedbackSubjectInput' class='input-fields'
                          label="Subject"
                          value="{{feedbackSubject}}"
@@ -136,6 +137,7 @@
                 <paper-button  dialog-dismiss>Cancel</paper-button>
                 <paper-button id="sendBtn"  on-tap='onSubmit'>Send</paper-button>
             </div>
+        </form>
 
 
         </paper-dialog>
