--- a/bower_components_modified/polymer-quill/polymer-quill-html-render.html
+++ b/bower_components_modified/polymer-quill/polymer-quill-html-render.html
@@ -102,8 +102,9 @@ Custom property | Description | Default
       }*/
 
       .markdown-html pre.ql-syntax {
-        color: #23241f;
-        background-color: #f9f9f9;--#f8f8f2;
+        --color: #23241f;
+        background-color: white; --#f9f9f9;--#f8f8f2;
+        --background-color: #f9f9f9;--#f8f8f2;
         font-size: 14px;
       }
     </style>
